--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.3",
     "ntp-client": "^0.5.3"
+    ,"googleapis": "^121.0.0"
   },
   "description": ""
 }
